# viper-core

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
configs/: config.yaml
configs/data/: automotive.yaml
configs/module/: adapter.yaml
configs/trainer/: default.yaml
tools/: eval.py  inference.py  train.py
viper/: losses.py  metrics.py  module.py
viper/data/: cityscapes.py  datamodule.py  transforms.py  urbansyn.py
viper/modeling/components/: adapter_deimv2.py  dpt.py  heads.py  timm_backbone.py
viper/modeling/models/: dinov3_timm.py
